# algorithm-engineering-st22

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
benchmark/: CMakeLists.txt  benchmark_helpers.hpp  command_line.hpp  for_each.hpp  graph_generation.hpp  instrumentation.hpp  mst_construction_benchmark.cpp  mst_verification_benchmark.cpp  verification_instance_generation.hpp
binaries/: binaries-deb.lib  binaries-rel.lib
includes/: binary_includes.hpp  definitions.hpp  utils.hpp
plots/: evaluation_mst_construction.r  evaluation_mst_verification.r  utils.r
src/: CMakeLists.txt  expected_linear_time_mst.hpp  mst_construction_parameters.hpp  mst_verification_parameters.hpp  naive_dfs_based_verifier.hpp  naive_jarnik_prim.hpp  naive_kruskal.hpp
src/datastructures/: naive_union_find.hpp  union_find.hpp
tests/: CMakeLists.txt  test_edge_classification.cpp
